force-app/main/default/objects/CTRDocumentMaster__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CTRDocumentMaster</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>SortOrder__c</columns>
        <columns>IsRequired__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>IsProtected</columns>
        <columns>Question__c</columns>
        <columns>DocumentName__c</columns>
        <columns>IsActive__c</columns>
        <columns>BusinessUnit__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
</CustomObject>